Bug fixes to overlapping annotations.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,8 @@
     --callout-border-rgb: 172, 175, 176;
     --card-rgb: 180, 185, 188;
     --card-border-rgb: 131, 134, 135;
+    --cursor-color-inner: #ffa00032;
+    --cursor-color-outer: #ff6f00;
 }
 
 /* @media (prefers-color-scheme: dark) {
